--- a/environment.yaml
+++ b/environment.yaml
@@ -202,7 +202,7 @@ dependencies:
       - moderngl==5.10.0
       - moderngl-window==2.4.6
       - multipledispatch==1.0.0
-      - networkx==2.2
+      - networkx
       - numpy==1.23.0
       - omegaconf==2.3.0
       - opencv-contrib-python-headless==4.9.0.80
@@ -220,7 +220,7 @@ dependencies:
       - smplx==0.1.28
       - tifffile==2024.5.10
       - trimesh==3.23.5
-      - urdfpy==0.0.22
+      - urdfpy
       - usd-core==24.5
       - websockets==12.0
-prefix: /home/huizhang/anaconda3/envs/arctic_viewer
+
